# data_science

./: .gitignore  pyproject.toml
data/interim/: artwork_data_interim.csv  artwork_data_small.xlsx  db.sqlite  multiple_sheets_data.xlsx  my_database.db
notebooks/: data.csv  file_parquet  pandas_intro.ipynb  pandas_intro_2.ipynb  pandas_merge.ipynb
src/: __init__.py
src/helpers/: helpers.py
